use long names for genes where possible

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -22,6 +22,39 @@
 \DeclareAcronym{GO}{long=Gene Ontology}
 \DeclareAcronym{FDR}{long=False Discovery Rate}
 \DeclareAcronym{gsea}{short=GSEA,long=gene set enrichment analysis}
+\DeclareAcronym{CRH}{short=\textit{CRH},long={corticotropin-releasing hormone}}
+\DeclareAcronym{KISS1}{short=\textit{KISS1},long={KiSS-1 metastatis-supressor}}
+\DeclareAcronym{PAPPA}{short=\textit{PAPPA},long={pappalysin 1}}
+\DeclareAcronym{ADAM12}{short=\textit{ADAM12},long={ADAM Metallopeptidase Domain 12}}
+\DeclareAcronym{ANXA1}{short=\textit{ANXA1},long={annexin A1}}
+\DeclareAcronym{ANXA5}{short=\textit{ANXA5},long={annexin A5}}
+\DeclareAcronym{S100A11}{short=\textit{S100A11},long={S100 calcium binding protein A11}}
+\DeclareAcronym{S100A10}{short=\textit{S100A10},long={S100 calcium binding protein A10}}
+\DeclareAcronym{LGALS1}{short=\textit{LGALS1},long={galectin 1}}
+\DeclareAcronym{LAMC1}{short=\textit{LAMC1},long={laminin subunit gamma 1}}
+\DeclareAcronym{LUM}{short=\textit{LUM},long={lumican}}
+\DeclareAcronym{GRB2}{short=\textit{GRB2},long={growth factor receptor bound protein 2}}
+\DeclareAcronym{RALB}{short=\textit{RALB},long={RAS like proto-oncogene B}}
+\DeclareAcronym{ERVFRD-1}{short=\textit{ERVFRD-1},long={endogenous retrovirus group FRD member 1}}
+\DeclareAcronym{ERVW-1}{short=\textit{ERVW-1},long={endogenous retrovirus group W member 1}}
+\DeclareAcronym{MFSD2A}{short=\textit{MFSD2A},long={major facilitator superfamily domain containing 2A}}
+\DeclareAcronym{PRSS16}{short=\textit{PRSS16},long={protease, serine 16}}
+\DeclareAcronym{TIMP3}{short=\textit{TIMP3},long={TIMP metallopeptidase inhibitor 3}}
+\DeclareAcronym{F11R}{short=\textit{F11R},long={F11 receptor}}
+\DeclareAcronym{SDC4}{short=\textit{SDC4},long={syndecan 4}}
+\DeclareAcronym{FN1}{short=\textit{FN1},long={fibronectin 1}}
+\DeclareAcronym{ITGB1}{short=\textit{ITGB1},long={integrin subunit beta 1}}
+\DeclareAcronym{ITGB1BP1}{short=\textit{ITGB1BP1},long={integrin subunit beta 1 binding protein 1}}
+\DeclareAcronym{EREG}{short=\textit{EREG},long={epiregulin}}
+\DeclareAcronym{UNC93A}{short=\textit{UNC93A},long={unc-93 homolog A (\textit{C. elegans})}}
+\DeclareAcronym{UNC93B1}{short=\textit{UNC93B1},long={unc-93 homolog B1 (\textit{C. elegans)}}}
+\DeclareAcronym{WNT5A}{short=\textit{WNT5A},long={Wnt family member 5A}}
+\DeclareAcronym{IL1RL1}{short=\textit{IL1RL1},long={interleukin 1 receptor like 1}}
+\DeclareAcronym{PLAC1}{short=\textit{PLAC1},long={placenta specific 1}}
+\DeclareAcronym{Afp}{short=\textit{Afp},long={alpha fetoprotein}}
+\DeclareAcronym{Gjb2}{short=\textit{Gjb2},long={gap junction protein beta 2}}
+\DeclareAcronym{CD9}{short=\textit{CD9},long={CD9 molecule}}
+
 
 %%% Local Variables:
 %%% mode: latex
