--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -400,7 +400,7 @@ for \bonobo %
 \end{sloppypar}
 
 \begin{figure}
-<<species.tree,fig.width=8,fig.height=6,out.width="\\columnwidth",echo=FALSE,message=FALSE,warning=FALSE>>=
+<<species.tree,fig.width=8,fig.height=6,out.width="90mm",echo=FALSE,message=FALSE,warning=FALSE>>=
 species.tree <- 
     read.tree(text="(Monodelphis_domestica,((Dasypus_novemcinctus,Loxodonta_africana)Atlantogenata,((Canis_familiaris,(Equus_caballus,(Sus_scrofa,(Ovis_aries,Bos_taurus))))Laurasiatheria,(((Spalax_carmeli,Spalax_galili),Mus_Musculus)Rodentia,((Pan_paniscus,Homo_sapiens),Ateles_fuciceps)Primates)Euarchontoglires)Boreoeutheria)Eutheria);")
 pp <- ggtree(species.tree)+
@@ -431,11 +431,11 @@ print(pp %>%
       ## mouse
       %>% phylopic("6b2b98f6-f879-445f-9ac2-2c2563157025",color="#BB11CC",alpha=0.3,node=11,width=0.18)
       ## bonobo
-      %>% phylopic("f06b4dd0-094e-4f37-9105-25fdb4eb1b02",color="#1111FF",alpha=0.3,node=12,width=0.18)
+      %>% phylopic("f06b4dd0-094e-4f37-9105-25fdb4eb1b02",color="#1111FF",alpha=0.3,node=12,width=0.15)
       ## spider monkey
       %>% phylopic("aceb287d-84cf-46f1-868c-4797c4ac54a8",color="#FF11FF",alpha=0.3,node=14,width=0.25)
       ## human
-      %>% phylopic("acf1cbec-f6ef-4a82-8ab5-be2f963b93f5",color="#CCCC44",alpha=0.3,node=13,width=0.3)
+      %>% phylopic("acf1cbec-f6ef-4a82-8ab5-be2f963b93f5",color="#AAAA11",alpha=0.3,node=13,width=0.4)
       )
 @ 
 \caption{Species tree for organisms studied showing the relationship
