--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -909,7 +909,7 @@ but are negatively correlated with pre-eclampsia
 \subsection{Core Placenta Transcriptome}
 
 \begin{figure}[tbh]
-<<core.placenta.transcriptome,fig.width=5,fig.height=8,out.height="0.8\\textheight",echo=FALSE>>=
+<<core.placenta.transcriptome,fig.width=9/2.5,fig.height=8,out.width="90mm",out.height="0.8\\textheight",echo=FALSE>>=
 cptl <-
     core.placenta.transcriptome.long[!grepl("(min|median|max|all)_expression|all_but_",
                                             Species) & housekeeping==FALSE,]
@@ -917,7 +917,7 @@ cptl <- cptl[,Species:=factor(gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",capfirst(S
                               levels=gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",
                                           capfirst(names(species.names))))]
 
-print(ggplot(cptl,aes(x=human_name,y=FPKM))+
+print(ggplot(cptl[FPKM > 0.1,],aes(x=human_name,y=FPKM))+
       geom_boxplot(outlier.shape=NA)+
       scale_y_log10(labels=trans_format("log10", math_format(10^.x)))+
       geom_point(aes(color=Species,shape=Species))+
@@ -927,7 +927,7 @@ print(ggplot(cptl,aes(x=human_name,y=FPKM))+
                                             keyheight=unit(3,"mm"),
                                             label.theme=element_text(face="italic",
                                                                      angle=0,
-                                                                     size=9),
+                                                                     size=7),
                                             title.position="top"
                                             ),
                          values=0:18)+
@@ -936,17 +936,18 @@ print(ggplot(cptl,aes(x=human_name,y=FPKM))+
       xlab("Human Ortholog Name")+
       ylab("Gene Expression (FPKM)")+
       theme_bw() +
-      theme(legend.position=c(0.7,0.15),
-            axis.text.y=element_text(face="italic"),
+      theme(text=element_text(size=9),
+            legend.position=c(0.99,0.41),
+            axis.text.y=element_text(face="italic",size=8),
             legend.margin=unit(0,"mm"),
-            legend.justification="left",
+            legend.justification=c(1,1),
             plot.margin=unit(c(0,0,0,0),"mm")
             ))
 @ 
 \caption{Core Placenta Transcriptome.
-  \Sexpr{core.placenta.transcriptome.long[,length(unique(human_name))]}
+  \Sexpr{core.placenta.transcriptome.long[housekeeping==FALSE,length(unique(human_name))]}
   1:1 \human ortholog genes expressed (\ac{FPKM}$ \ge 10$) in the
-  placenta of all \Sexpr{star.logs[,length(unique(species))]} species
+  placenta of all 13 Eutherians
   studied with housekeeping genes
   \cite{Eisenberg.ea2013:Humanhousekeepinggenesrevisited} removed
   ordered (from top to bottom) by median expression. Supplemental
@@ -959,7 +960,7 @@ print(ggplot(cptl,aes(x=human_name,y=FPKM))+
 
 
 \begin{figure}
-<<core.placenta.transcriptome.distribution,fig.width=5,fig.height=5,out.height="0.8\\textheight",echo=FALSE,message=FALSE>>=
+<<core.placenta.transcriptome.distribution,fig.width=9/2.5,fig.height=9/2.5,out.width="90mm",out.height="0.8\\textheight",echo=FALSE,message=FALSE>>=
 num.species <- star.logs.wide[,length(unique(species))]
 calculate.distribution.shape <- 
     function(min.vector) {
@@ -976,26 +977,34 @@ cpt.distribution.shape <-
              "all_but_one_expression",
              "all_but_two_expression",
              "all_but_three_expression",
-             "all_but_four_expression"),
+             "all_but_four_expression",
+             "all_but_metatherian_expression"
+             ),
            function(x){
                calculate.distribution.shape(cptg.nh[,x,with=FALSE][[1]])[,`Min. Exp. in`:=x]
            })
 fix.expression.names <- function(x){
-    x <- gsub("^all_expression$",
-              paste0(num.species," of ",num.species),
+    x <- gsub("^all_but_metatherian_expression$",
+              paste0("All ",num.species-1," Eutherians"),
               x
               )
-    nc.levels <- paste0(num.species," of ",num.species)
+    x <- gsub("^all_expression$",
+              paste0(num.species," of ",num.species," Species"),
+              x
+              )
+    nc.levels <- c(paste0("All ",num.species-1," Eutherians"),
+                   paste0(num.species," of ",num.species," Species")
+                   )
     ## number coutner
     nc <- c("one"=1,"two"=2,"three"=3,"four"=4)
     for (a in names(nc)) {
         x <- gsub(paste0("^all_but_",a,"_expression$"),
-              paste0(num.species-nc[a]," of ",num.species),
+              paste0(num.species-nc[a]," of ",num.species," Species"),
               x
               )
         nc.levels <-
             c(nc.levels,
-              paste0(num.species-nc[a]," of ",num.species))
+              paste0(num.species-nc[a]," of ",num.species," Species"))
     }
     return(factor(x,levels=nc.levels))
 }
@@ -1006,7 +1015,6 @@ cpt.distribution.shape <-
 cpt.distribution.shape <- 
     cpt.distribution.shape[,`Min. Exp. in`:=
                                 fix.expression.names(`Min. Exp. in`)]
-
 setnames(cpt.distribution.shape,
          "FPKM",
          "Expression (FPKM)")
@@ -1015,29 +1023,38 @@ print(ggplot(cpt.distribution.shape[`Expression (FPKM)` > 0.1,],
              aes(x=`Expression (FPKM)`,color=`Min. Exp. in`,y=num_genes))
       + geom_line(lwd=1)
       + xlab("Minimum Expression cutoff (FPKM)")
-      + ylab("Number of Genes Meeting FPKM Cutoff in N species")
+      + ylab("Number of Genes Meeting FPKM Cutoff")
       + scale_y_log10(breaks = trans_breaks("log10", function(x) 10^x),
                       labels = trans_format("log10", math_format(10^.x)))
       + scale_x_log10(breaks = trans_breaks("log10", function(x) 10^x),
                       labels = trans_format("log10", math_format(10^.x)))
       + geom_vline(xintercept=10,linetype="dotted")
-      + geom_segment(mapping=aes(y=V1,
+      + geom_segment(mapping=aes(y=V1-ifelse(V1<80,20,0),
                          yend=V1,
                          xend=10,
-                         x=300,
+                         x=sapply(V1,
+                                  function(x){
+                                      cpt.distribution.shape[num_genes > x,
+                                                             max(`Expression (FPKM)`)*4]
+                                  }),
                          color=`Min. Exp. in`),
                      data=cpt.distribution.shape[`Expression (FPKM)` > 10,
                                               max(num_genes),`Min. Exp. in`],
                      arrow=arrow(length=unit(0.5,"cm")),
                      show.legend=FALSE
                      )
-      + geom_text(mapping=aes(x=300,
-                      y=V1,
+      + geom_text(mapping=aes(x=sapply(V1,
+                                       function(x){
+                                           cpt.distribution.shape[num_genes > x,
+                                                                  max(`Expression (FPKM)`)*4.1]
+                                       }),
+                      y=V1-ifelse(V1<80,20,0),
                       label=paste0(V1," genes"),override=TRUE),
                   data=cpt.distribution.shape[`Expression (FPKM)` > 10,
                       max(num_genes),`Min. Exp. in`],
                   show.legend=FALSE,
-                  hjust=0
+                  hjust=0,
+                  size=8*(5/14)
                   )
       + geom_segment(mapping=aes(yend=V1,
                          y=100,
@@ -1045,7 +1062,7 @@ print(ggplot(cpt.distribution.shape[`Expression (FPKM)` > 0.1,],
                          x=1,
                          color=`Min. Exp. in`),
                      data=cpt.distribution.shape[`Expression (FPKM)` > 1 &
-                                                 `Min. Exp. in` == '14 of 14',
+                                                 `Min. Exp. in` == 'All 13 Eutherians',
                                                  max(num_genes),`Min. Exp. in`],
                      arrow=arrow(length=unit(0.5,"cm")),
                      show.legend=FALSE
@@ -1056,19 +1073,22 @@ print(ggplot(cpt.distribution.shape[`Expression (FPKM)` > 0.1,],
                       override=TRUE),
                   angle=90,
                   data=cpt.distribution.shape[`Expression (FPKM)` > 1 &
-                                              `Min. Exp. in` == '14 of 14',
+                                              `Min. Exp. in` == 'All 13 Eutherians',
                                               max(num_genes),`Min. Exp. in`],
                   show.legend=FALSE,
-                  hjust=1
+                  hjust=1,
+                  size=8*(5/14)
                   )
-      + guides(color=guide_legend(title=paste0("Min. Expression in\nn of ",num.species," Species"),
+      + guides(color=guide_legend(title=paste0("Minimum\nExpression in"),
                                   keywidth=unit(3,"mm"),
                                   keyheight=unit(3,"mm"),
                                   title.hjust=0.5,
-                                  label.position="right"
+                                  label.position="right",
+                                  label.theme=element_text(size=7,angle=0)
                                   ))
       + theme_bw()
-      + theme(legend.position=c(0.98,0.98),
+      + theme(text=element_text(size=9),
+              legend.position=c(0.99,0.99),
               legend.margin=unit(0,"mm"),
               legend.justification=c(1,1),
               plot.margin=unit(c(0,0,0,0),"mm")
@@ -1087,17 +1107,17 @@ print(ggplot(cpt.distribution.shape[`Expression (FPKM)` > 0.1,],
   For example, if the cutoff is set to 10 (vertical black line), 
   % 
   \Sexpr{cpt.distribution.shape[`Expression (FPKM)` > 10 
-    & `Min. Exp. in` == '14 of 14',max(num_genes)]}
+    & `Min. Exp. in` == 'All 13 Eutherians',max(num_genes)]}
   %
-  genes would be included if the FPKM of a set of 1:1 orthologs of all 14 species must be at
-  least 10, %
+  genes would be included if the expression of a set of 1:1 orthologs of all 13 Eutherians must be at
+  least 10 FPKM, %
   \Sexpr{cpt.distribution.shape[`Expression (FPKM)` > 10 
-    & `Min. Exp. in` == '13 of 14',max(num_genes)]}
+    & `Min. Exp. in` == '13 of 14 Species',max(num_genes)]}
   %
   1:1 orthologs would be included if 13 of 14 species have an
-   with an FPKM of at least 10, and 
+   expression of at least 10 FPKM, and 
   \Sexpr{cpt.distribution.shape[`Expression (FPKM)` > 10 
-    & `Min. Exp. in` == '10 of 14',max(num_genes)]}
+    & `Min. Exp. in` == '10 of 14 Species',max(num_genes)]}
   genes would be included if 10 of 14 species
   must have an FPKM of at least 10.}
 \label{fig:core_placenta_transcriptome_shape}
@@ -1120,7 +1140,7 @@ which would be included in the core placenta set if the \ac{FPKM}
 cutoff was set differently; for example, choosing an \ac{FPKM} cutoff
 of 1 yields %
 \Sexpr{cpt.distribution.shape[`Expression (FPKM)`>=1 & `Min. Exp. in`
-  == '14 of 14',max(num_genes)]} %
+  == '14 of 14 Species',max(num_genes)]} %
 genes in the core transcriptome. %
 In contrast to the shape of the number of genes included in the core
 placenta transcriptome, the set of \human housekeeping genes expressed
